# time-locked-vault

./: README.md
locked-vault/: Cargo.toml  README.md
locked-vault/frontend/: package-lock.json  package.json  tailwind.config.ts
locked-vault/frontend/app/: globals.css  layout.tsx  page.tsx
locked-vault/frontend/app/dashboard/: layout.tsx  page.tsx
locked-vault/frontend/app/dashboard/deposit/: page.tsx
locked-vault/frontend/app/dashboard/locks/: page.tsx
locked-vault/frontend/app/deposit/: page.tsx
locked-vault/frontend/app/docs/: page.tsx
locked-vault/frontend/app/portfolio/: page.tsx
locked-vault/frontend/app/settings/: page.tsx
locked-vault/frontend/app/withdraw/: page.tsx
locked-vault/frontend/components/: balance-display.tsx  dashboard-header.tsx  dashboard-sidebar.tsx  dashboard-view.tsx  deposit-form.tsx  landing-header.tsx  navbar.tsx  network-indicator.tsx  orbital-background.tsx  portfolio-summary.tsx  portfolio-view.tsx  recent-activity.tsx  settings-form.tsx  sidebar.tsx  user-nav.tsx  wallet-button.tsx  wallet-modal.tsx  withdraw-confirm-dialog.tsx  withdraw-list.tsx
locked-vault/frontend/components/ui/: toast.tsx
locked-vault/frontend/context/: wallet-context.tsx
locked-vault/frontend/lib/: utils.ts
locked-vault/src/: .gitignore  errors.rs  events.rs  lib.rs  main.rs  models.rs
locked-vault/src/bitcoin/: lightning.rs  mempool.rs  mod.rs  multisig.rs  ordinals.rs  rpc.rs  signature.rs  testnet.rs  transfer.rs  utxo.rs
locked-vault/src/contract/: contract_core.rs  mod.rs
locked-vault/src/tests/: mod.rs
(+3 files in other folders)
